@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<deviceinfo version="0.2">
+  <device>
+    <match key="/org/freedesktop/Hal/devices/computer:system.kernel.name" string="GNU/kFreeBSD">
+      <match key="info.capabilities" contains="input.keys">
+        <merge key="input.x11_driver" type="string">kbd</merge>
+      </match>
+    </match>
+  </device>
+</deviceinfo>
+
